# flote

./: .gitignore  Cargo.toml  README.md  build.md  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
.github/workflows/: python-package.yml
doc/: flooat_lang.ebnf
docs/: flote.ebnf  index.md
docs/advanced/: hls-components.md
docs/api/: python-api.md
docs/examples/: full-adder.md  rs-latch.md
docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/guide/: basic-concepts.md  syntax-reference.md
flooat/: __init__.py  ast.py  builder.py  component.py  parser.py  scanner.py  visitor.py
flote/: __init__.py  ast.py  builder.py  component.py  elaboration.py  hls.py  parser.py  scanner.py  test_bench.py  testbench.py
flote/backend/: api.py
flote/elaboration/: ast.py  ast_nodes.py  builder.py  parser.py  scanner.py  symbol_table.py
flote/elaborator/: builder.py  parser.py  scanner.py
flote/frontend/: ast_nodes.py  builder.py  parser.py  scanner.py  symbol_table.py
flote/model/: busses.py  component.py  expr_nodes.py  operations.py  operators.py
flote/simulation/: busses.py  component.py  expr_nodes.py  (+1 more)
src/: busses.rs  component.py  component.rs  expr_nodes.rs  flooat.py  lib.rs  main.py  parser.py  renderer.rs  scanner.py  visitor.py
test/: RSLatch.ft  fourBitsAdder.ft  halfAdder.ft  halfAdder_tb.py  integration_test.py  rslatch_fw.py  rslatch_tb.py  scanner_test.py  test integration_build.py  test.vcd  test_integration_elaboration.py  test_system_half_adder_tb.py  test_system_rs_latch_tb.py
tests/: README.md  case_elaborator.py  expl_test_elaboration.py  expr_test_half_adder_tb.py  expr_test_system_rs_latch_tb.py  halfAdder.ft  halfAdder.vcd  halfAdderTB.py  modules_tests.py  test_integration_build.py  test_integration_elaboration.py  test_subcomponent.py  test_system_build_comp.py  test_system_rs_latch_tb.py  testbench.py  utils.py
(+53 files in other folders)
