[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "flote"
version = "0.4.0"
requires-python = ">=3.8"
description = "Flote is a HDL and Python framework for simulation. Designed to be friendly, simple, and productive. Easy to use and learn."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flote.backend.rust.core"
