[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "flote"
version = "0.6.0"
requires-python = ">=3.10"
description = "Flote is a HDL and Python framework for simulation. Designed to be friendly, simple, and productive. Easy to use and learn."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flote.backend.rust.core"
